xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__with_predicate.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_expr_single(\"child::foo[1]\")"
---
Spanned {
    value: Path(
        PathExpr {
            steps: [
                Spanned {
                    value: AxisStep(
                        AxisStep {
                            axis: Child,
                            node_test: NameTest(
                                Name(
                                    Name {
                                        name: "foo",
                                        namespace: None,
                                    },
                                ),
                            ),
                            predicates: [
                                Spanned {
                                    value: [
                                        Spanned {
                                            value: Path(
                                                PathExpr {
                                                    steps: [
                                                        Spanned {
                                                            value: PrimaryExpr(
                                                                Spanned {
                                                                    value: Literal(
                                                                        Integer(
                                                                            1,
                                                                        ),
                                                                    ),
                                                                    span: SourceSpan {
                                                                        offset: SourceOffset(
                                                                            11,
                                                                        ),
                                                                        length: SourceOffset(
                                                                            1,
                                                                        ),
                                                                    },
                                                                },
                                                            ),
                                                            span: SourceSpan {
                                                                offset: SourceOffset(
                                                                    11,
                                                                ),
                                                                length: SourceOffset(
                                                                    1,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                },
                                            ),
                                            span: SourceSpan {
                                                offset: SourceOffset(
                                                    11,
                                                ),
                                                length: SourceOffset(
                                                    1,
                                                ),
                                            },
                                        },
                                    ],
                                    span: SourceSpan {
                                        offset: SourceOffset(
                                            11,
                                        ),
                                        length: SourceOffset(
                                            1,
                                        ),
                                    },
                                },
                            ],
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            13,
                        ),
                    },
                },
            ],
        },
    ),
    span: SourceSpan {
        offset: SourceOffset(
            0,
        ),
        length: SourceOffset(
            13,
        ),
    },
}
