xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__xpath_ge.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_xpath_no_default_ns(\"1 >= 2\")"
---
Ok(
    XPath {
        exprs: Spanned {
            value: [
                Spanned {
                    value: Binary(
                        BinaryExpr {
                            operator: GenGe,
                            left: PathExpr {
                                steps: [
                                    Spanned {
                                        value: PrimaryExpr(
                                            Spanned {
                                                value: Literal(
                                                    Integer(
                                                        "1",
                                                    ),
                                                ),
                                                span: SourceSpan {
                                                    offset: SourceOffset(
                                                        0,
                                                    ),
                                                    length: SourceOffset(
                                                        1,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                0,
                                            ),
                                            length: SourceOffset(
                                                1,
                                            ),
                                        },
                                    },
                                ],
                            },
                            right: PathExpr {
                                steps: [
                                    Spanned {
                                        value: PrimaryExpr(
                                            Spanned {
                                                value: Literal(
                                                    Integer(
                                                        "2",
                                                    ),
                                                ),
                                                span: SourceSpan {
                                                    offset: SourceOffset(
                                                        5,
                                                    ),
                                                    length: SourceOffset(
                                                        1,
                                                    ),
                                                },
                                            },
                                        ),
                                        span: SourceSpan {
                                            offset: SourceOffset(
                                                5,
                                            ),
                                            length: SourceOffset(
                                                1,
                                            ),
                                        },
                                    },
                                ],
                            },
                        },
                    ),
                    span: SourceSpan {
                        offset: SourceOffset(
                            0,
                        ),
                        length: SourceOffset(
                            6,
                        ),
                    },
                },
            ],
            span: SourceSpan {
                offset: SourceOffset(
                    0,
                ),
                length: SourceOffset(
                    6,
                ),
            },
        },
    },
)
