xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__xpath_multi_expr.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_xpath_no_default_ns(\"1 + 2, 3 + 4\")"
---
Ok(
    XPath {
        exprs: [
            (
                Binary(
                    BinaryExpr {
                        operator: Add,
                        left: PathExpr {
                            steps: [
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                ),
                            ],
                        },
                        right: PathExpr {
                            steps: [
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                2,
                                            ),
                                        ),
                                        4..5,
                                    ),
                                ),
                            ],
                        },
                    },
                ),
                0..5,
            ),
            (
                Binary(
                    BinaryExpr {
                        operator: Add,
                        left: PathExpr {
                            steps: [
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                3,
                                            ),
                                        ),
                                        7..8,
                                    ),
                                ),
                            ],
                        },
                        right: PathExpr {
                            steps: [
                                PrimaryExpr(
                                    (
                                        Literal(
                                            Integer(
                                                4,
                                            ),
                                        ),
                                        11..12,
                                    ),
                                ),
                            ],
                        },
                    },
                ),
                7..12,
            ),
        ],
    },
)
