xee-xpath/src/snapshots/xee_xpath__parse_ast__tests__xpath_parse_error.snap
---
source: xee-xpath/src/parse_ast.rs
expression: "parse_xpath_no_default_ns(\"1 + 2 +\")"
---
Err(
    XPST0003 {
        src: NamedSource {
            name: "input",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                6,
            ),
            length: SourceOffset(
                0,
            ),
        },
    },
)
